# Rode

./: AGENTS.md  Cargo.toml  Gemfile  README.md
.github/: release.yml
.github/workflows/: release.yml
DOCS/: CODE_EDITOR_COLOR_CUSTOMIZATION.md
assets/macos/: Info.plist
src/: Cargo.toml  app.rs  build.js  command_palette.rs  file_tree.rs  fuzzy_finder.rs  icon_manager.rs  icon_theme.rs  icons.rs  lsp_setup.rs  main.rs  menu.rs  message.rs  settings.rs  syntax_highlighter.rs  terminal.rs  theme.rs  theme_manager.rs  updater.rs  vim_motions.rs
src/_site/: index.html
src/app/: commands.rs  lifecycle.rs  subscription.rs  update.rs  view_editor.rs  view_finders.rs  view_root.rs  vim.rs
src/autocomplete/: context.rs  engine.rs  language.rs  mod.rs  scoring.rs  types.rs
src/config/: file_ops.rs  mod.rs  preferences.rs  theme_manager.rs
src/docs/: docs.md
src/features/: command_input.rs  command_palette.rs  editor_buffer.rs  file_tree.rs  find_replace.rs  fuzzy_finder.rs  icons.rs  lsp.rs  mod.rs  resources.rs  search.rs  syntax.rs  terminal.rs  updater.rs
src/hotkey/: find_replace.rs  mod.rs  vim_motions.rs
src/pages/: about.html  index.html  install.sh
src/scripting/: mod.rs
src/setup/: app.rs  menu.rs  mod.rs  tab_manager.rs  theme.rs
src/src/: app.rs  file_ops.rs  main.rs  menu.rs
src/subscriptions/: keyboard.rs  mod.rs  mouse.rs
src/syntax_highlighting/: detection.rs  engine.rs  mod.rs  types.rs
src/ui/: editor.rs  sidebar.rs  styles.rs
src/wakatime/: client.rs  config.rs
tests/: .env  tests.py
tests/scripts/: builtin_tokyonight_init.lua  custom_status_bar_init.lua  mixed_layout_init.lua  sidebar_hidden_init.lua
utils/: build.sh
