[package]
name = "rode-editor"
version = "0.3.1"
edition = "2021"
authors = ["Kashyap Sukshavas"]
description = "A lightweight editor built with rust"
license = "GPL-3.0-only"
repository = "https://github.com/kashsuks/rode"
readme = "README.md"
keywords = ["editor", "terminal", "egui"]
categories = ["development-tools"]
include = ["src/**/*", "assets/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
eframe = "0.29"
egui = "0.29"
rfd = "0.14"
image = "0.24"
resvg = "0.29"
usvg = "0.29"
tiny-skia = "0.11"
include_dir = "0.7"
regex="1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tree-sitter-highlight = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
