[package]
name = "pinel-editor"
version = "0.4.3"
edition = "2021"
authors = ["Kashyap Sukshavas"]
description = "A lightweight editor built with rust"
license = "GPL-3.0-only"
repository = "https://github.com/kashsuks/Pinel"
readme = "README.md"
keywords = ["editor", "terminal", "egui"]
categories = ["development-tools"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
eframe = "0.29"
egui = "0.29"
image = "0.24"
resvg = "0.29"
usvg = "0.29"
tiny-skia = "0.11"
include_dir = "0.7"
regex = "1.10"

tree-sitter-highlight = "0.25"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"

iced = { version = "0.14.0", features = ["svg", "image", "advanced", "markdown", "tokio"] }
iced_term = "0.7.0"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "regex-onig"] }
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
ignore = "0.4"
fuzzy-matcher = "0.3"
dirs = "5"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

lsp-types = "0.97.0"
tokio-lsp = "0.1.1"
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util", "sync", "time"] }
url = "2.5"
ropey = "1.6"
iced-code-editor = { version = "0.3.7", features = ["lsp-process"] }
frostmark = "0.3"

quinn-proto = "0.11.14"
bytes = "1.11.1"
